--- a/lib/poxy/poxy-y.styl
+++ b/lib/poxy/poxy-y.styl
@@ -1,7 +1,7 @@
 /////////////////////////////////
 // POXY STYLES
 /////////////////////////////////
-poxy-y(zone, zone_min, zone_max, numerator_range, gutter_x_width, offset)
+poxy-y(zone, numerator_array, denominator_array, gutter_x_width, offset)
   for n in numerator_range
     for d in denominator_range
       \[class\*\={zone}\_{n}{d}\],
@@ -12,3 +12,15 @@ poxy-y(zone, zone_min, zone_max, numerator_range, gutter_x_width, offset)
       \[class\*\={zone}\_{n}{d}\]._3b__ ~ * > * > *:nth-child(2),
       \[class\*\={zone}\_{n}{d}\]._3c__ ~ * > * > *:nth-child(3)
         poxy-y n/d copy_width gutter_x
+
+poxy-y-rem(zone, numerator_array, denominator_array, gutter_x_width, offset)
+  for n in numerator_range
+    for d in denominator_range
+      \[class\*\={zone}\_{n}{d}\],
+      \[class\*\={zone}\_{n}{d}\]._1__ ~ *,
+      \[class\*\={zone}\_{n}{d}\]._2__ ~ * > *,
+      \[class\*\={zone}\_{n}{d}\]._3__ ~ * > * > *,
+      \[class\*\={zone}\_{n}{d}\]._3a__ ~ * > * > *:nth-child(1),
+      \[class\*\={zone}\_{n}{d}\]._3b__ ~ * > * > *:nth-child(2),
+      \[class\*\={zone}\_{n}{d}\]._3c__ ~ * > * > *:nth-child(3)
+        poxy-y-rem n/d copy_width gutter_x
