--- a/lib/poxy/poxy-x.styl
+++ b/lib/poxy/poxy-x.styl
@@ -4,6 +4,18 @@
 poxy-x(zone, numerator_array, denominator_array, gutter_x_width, offset)
   for n in numerator_array
     for d in denominator_array
+      \[class\*\={zone}{n}{d}\]
+        poxy-x n/d copy_width gutter_x
+
+poxy-x-rem(zone, numerator_array, denominator_array, gutter_x_width, offset)
+  for n in numerator_array
+    for d in denominator_array
+      \[class\*\={zone}{n}{d}\]
+        poxy-x-rem n/d copy_width gutter_x
+
+poxy-x-target(zone, numerator_array, denominator_array, gutter_x_width, offset)
+  for n in numerator_array
+    for d in denominator_array
       \[class\*\={zone}{n}{d}\],
       \[class\*\={zone}{n}{d}\]._1__ ~ *,
       \[class\*\={zone}{n}{d}\]._2__ ~ * > *,
@@ -13,7 +25,7 @@ poxy-x(zone, numerator_array, denominator_array, gutter_x_width, offset)
       \[class\*\={zone}{n}{d}\]._3c__ ~ * > * > *:nth-child(3)
         poxy-x n/d copy_width gutter_x
 
-poxy-x-rem(zone, numerator_array, denominator_array, gutter_x_width, offset)
+poxy-x-target-rem(zone, numerator_array, denominator_array, gutter_x_width, offset)
   for n in numerator_array
     for d in denominator_array
       \[class\*\={zone}{n}{d}\],
