--- a/lib/poxy/poxy-y.styl
+++ b/lib/poxy/poxy-y.styl
@@ -4,6 +4,18 @@
 poxy-y(zone, numerator_array, denominator_array, gutter_x_width, offset)
   for n in numerator_array
     for d in denominator_array
+      \[class\*\={zone}\_{n}{d}\]
+        poxy-y n/d copy_width gutter_x
+
+poxy-y-rem(zone, numerator_array, denominator_array, gutter_x_width, offset)
+  for n in numerator_array
+    for d in denominator_array
+      \[class\*\={zone}\_{n}{d}\]
+        poxy-y-rem n/d copy_width gutter_x
+
+poxy-y-target(zone, numerator_array, denominator_array, gutter_x_width, offset)
+  for n in numerator_array
+    for d in denominator_array
       \[class\*\={zone}\_{n}{d}\],
       \[class\*\={zone}\_{n}{d}\]._1__ ~ *,
       \[class\*\={zone}\_{n}{d}\]._2__ ~ * > *,
@@ -13,7 +25,7 @@ poxy-y(zone, numerator_array, denominator_array, gutter_x_width, offset)
       \[class\*\={zone}\_{n}{d}\]._3c__ ~ * > * > *:nth-child(3)
         poxy-y n/d copy_width gutter_x
 
-poxy-y-rem(zone, numerator_array, denominator_array, gutter_x_width, offset)
+poxy-y-target-rem(zone, numerator_array, denominator_array, gutter_x_width, offset)
   for n in numerator_array
     for d in denominator_array
       \[class\*\={zone}\_{n}{d}\],
